--- a/maquette/css/style.css
+++ b/maquette/css/style.css
@@ -113,6 +113,11 @@ select {
     gap:var(--gap, 1rem);
 }
 
+.flow > *:where(:not(:first-child))  {
+    margin-top: var(--flow-space, 1rem);
+    outline: 1px solid red;
+}
+
 .container {
     padding-inline: 2em;
     margin-inline: auto;
@@ -147,6 +152,8 @@ select {
 .text-accent { color: hsl(var(--clr-light));}
 .text-white { color: hsl(var(--clr-white));}
 
+
+
 /* typography */
 .ff-serif { font-family: var(--ff-serif); } 
 .ff-sans-cond { font-family: var(--ff-sans-cond); } 
@@ -172,4 +179,17 @@ select {
 .fs-700,
 .fs-600 {
     line-height: 1.1;
+}
+
+.numbered-title {
+    font-family: var(--ff-sans-cond);
+    font-size: var(--fs-500);
+    text-transform: uppercase;
+    letter-spacing: 4.72px;
+}
+
+.numbered-title span {
+    margin-right: .5em;
+    font-weight: 700;
+    color: hsl(var(--clr-white) / .25);
 }
